test/files/neg/post-postfix.check
post-postfix.scala:5: error: postfix operator head needs to be enabled
by making the implicit value scala.language.postfixOps visible.
This can be achieved by adding the import clause 'import scala.language.postfixOps'
or by setting the compiler option -language:postfixOps.
See the Scaladoc for value scala.language.postfixOps for a discussion
why the feature needs to be explicitly enabled.
  def f(): Int = List(1) head
                         ^
one error found
